examples/test/testpolicy15404.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15404
  namespace: namespace431
spec:
  podSelector:
    matchLabels:
      key31: value38
      key39: value46
      key38: value11
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key28: value20
          key41: value46
          key27: value41
